--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  getwidget: ^4.0.0
+  hugeicons: ^0.0.7
+  animated_text_kit: ^4.2.2
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
@@ -59,8 +63,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -74,15 +78,27 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: Outfit
+      fonts:
+        - asset: assets/fonts/Outfit-Light.ttf
+          weight: 300
+        - asset: assets/fonts/Outfit-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Outfit-Regular.ttf
+          weight: 400
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+    - family: NunitoSans
+      fonts:
+        - asset: assets/fonts/NunitoSans_10pt-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/NunitoSans_10pt-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/NunitoSans_10pt-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/NunitoSans_10pt-Light.ttf
+          weight: 300
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
